--- a/v1_net45/packages.config
+++ b/v1_net45/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.1.0-beta1-build1051" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-beta3-build1059" targetFramework="net45" userInstalled="true" />
 </packages>
