--- a/v2_PCL/packages.config
+++ b/v2_PCL/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="xunit" version="2.1.0-beta1-build2945" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="xunit.assert" version="2.1.0-beta1-build2945" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="xunit.core" version="2.1.0-beta1-build2945" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="xunit.extensibility.core" version="2.1.0-beta1-build2945" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="xunit.runner.visualstudio" version="2.1.0-beta1-build1051" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="xunit" version="2.1.0-beta3-build2988" targetFramework="portable45-net45+wp8" userInstalled="true" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="portable45-net45+wp8" userInstalled="true" />
+  <package id="xunit.assert" version="2.1.0-beta3-build2988" targetFramework="portable45-net45+wp8" userInstalled="true" />
+  <package id="xunit.core" version="2.1.0-beta3-build2988" targetFramework="portable45-net45+wp8" userInstalled="true" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta3-build2988" targetFramework="portable45-net45+wp8" userInstalled="true" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-beta3-build1059" targetFramework="portable45-net45+wp8" userInstalled="true" />
 </packages>
