--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="Public Feed" value="https://nuget.org/api/v2/" />
+    <add key="CI Builds (aspnetrelease)" value="https://www.myget.org/F/aspnetrelease/" />
     <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/" />
     <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/" />
   </packageSources>
