--- a/v2_dnx/project.json
+++ b/v2_dnx/project.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "xunit": "2.1.0-beta3-build2986",
-        "xunit.runner.dnx": "2.1.0-beta3-build80"
+        "xunit": "2.1.0-beta3-*",
+        "xunit.runner.dnx": "2.1.0-beta3-*"
     },
     "commands": {
         "test": "xunit.runner.dnx"
