--- a/v2_dnx/project.json
+++ b/v2_dnx/project.json
@@ -14,7 +14,7 @@
         },
         "dnx50": {
             "dependencies": {
-                "System.Runtime": "4.0.20-*"
+                "System.Runtime": "4.0.20-beta-*"
             }
         }
     }
