--- a/v2_dnx/project.json
+++ b/v2_dnx/project.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "xunit": "2.1.0-beta3-*",
-        "xunit.runner.dnx": "2.1.0-beta3-*"
+        "xunit": "2.1.0-beta4-build3033",
+        "xunit.runner.dnx": "2.1.0-beta4-build103"
     },
     "commands": {
         "test": "xunit.runner.dnx"
