--- a/v2_dnx/project.json
+++ b/v2_dnx/project.json
@@ -1,13 +1,13 @@
 {
     "dependencies": {
-        "xunit": "2.1.0-beta4-*",
-        "xunit.runner.dnx": "2.1.0-beta4-*"
+        "xunit": "2.1.0-beta4-build3109",
+        "xunit.runner.dnx": "2.1.0-beta4-build134"
     },
     "commands": {
         "test": "xunit.runner.dnx"
     },
     "frameworks": {
-        "dnx46": { },
+        "dnx451": { },
         "dnxcore50": { }
     }
 }
