--- a/NUnit_and_v2x/packages.config
+++ b/NUnit_and_v2x/packages.config
@@ -2,10 +2,11 @@
 <packages>
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="NUnitTestAdapter" version="1.2" targetFramework="net45" />
-  <package id="xunit" version="2.1.0-beta4-build3109" targetFramework="net45" />
+  <package id="xunit" version="2.1.0-rc1-build3131" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.1.0-beta4-build1107" targetFramework="net45" />
+  <package id="xunit.assert" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.core" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-rc1-build1115" targetFramework="net45" />
 </packages>
