--- a/v20_Win81/packages.config
+++ b/v20_Win81/packages.config
@@ -5,5 +5,5 @@
   <package id="xunit.assert" version="2.0.0" targetFramework="win81" />
   <package id="xunit.core" version="2.0.0" targetFramework="win81" />
   <package id="xunit.extensibility.core" version="2.0.0" targetFramework="win81" />
-  <package id="xunit.runner.visualstudio" version="2.1.0-beta4-build1107" targetFramework="win81" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-rc1-build1115" targetFramework="win81" />
 </packages>
