--- a/v2x_UWP/project.json
+++ b/v2x_UWP/project.json
@@ -1,8 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "xunit": "2.1.0-beta4-build3109",
-    "xunit.runner.visualstudio": "2.1.0-beta4-build1107"
+    "xunit": "2.1.0-rc1-build3131",
+    "xunit.runner.visualstudio": "2.1.0-rc1-build1115"
   },
   "frameworks": {
     "uap10.0": {}
