--- a/v2x_dnx/project.json
+++ b/v2x_dnx/project.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "xunit": "2.1.0-beta4-build3109",
-        "xunit.runner.dnx": "2.1.0-beta4-build134"
+        "xunit": "2.1.0-rc1-*",
+        "xunit.runner.dnx": "2.1.0-beta5-*"
     },
     "commands": {
         "test": "xunit.runner.dnx"
