--- a/v2x_net45/packages.config
+++ b/v2x_net45/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="xunit" version="2.1.0-beta4-build3109" targetFramework="net45" />
+  <package id="xunit" version="2.1.0-rc1-build3131" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.1.0-beta4-build3109" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.1.0-beta4-build1107" targetFramework="net45" />
+  <package id="xunit.assert" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.core" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.1.0-rc1-build3131" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-rc1-build1115" targetFramework="net45" />
 </packages>
