--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="Public Feed" value="https://nuget.org/api/v2/" />
+    <clear/>
     <add key="CI Builds (aspnetrelease)" value="https://www.myget.org/F/aspnetrelease/" />
     <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/" />
     <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
-  <disabledPackageSources />
-  <activePackageSource>
-    <add key="All" value="(Aggregate source)"  />
-  </activePackageSource>
+  <disabledPackageSources>
+    <add key="Microsoft and .NET" value="true" />
+  </disabledPackageSources>
 </configuration>
